[package]
name = "wallpaper"
version = "3.0.0"
edition = "2021"
authors = ["Sindre Sorhus", "Allister Isaiah Harvey"]
description = "Manage the desktop wallpaper on Windows"

[[bin]]
name = "wallpaper"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
windows = { version = "0.44.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_UI_Shell",
] }
